fix : z-index augmenté car probleme de responsive avec les section

--- a/style/style.css
+++ b/style/style.css
@@ -206,6 +206,7 @@ button.projet:hover {
 }
 
 .bubble {
+    z-index: 3;
     display: none;
     width: 1px;
     height: 1px;
